--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -78,10 +78,10 @@ jobs:
           run: sudo apt-get update && sudo apt-get install make 
 
         - name: Create Env Virtual
-          run: make venv
+            run: make venv && make test
 
-        - name: Run Testes
-          run: make test
+        # - name: Run Testes
+        #   run: make test
 
         - uses: mr-smithers-excellent/docker-build-push@v6
           name: Build & push Docker image
