--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a single version of Python
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
 
-name: Python application Flask CI/CD 
+name: Python application Flask CI/CD Web 
 
 on:
   push:
@@ -77,11 +77,11 @@ jobs:
         - name: Install Make 
           run: sudo apt-get update && sudo apt-get install make && pip install --upgrade pip
 
-        - name: Create Env Virtual
+        - name: Create Env Virtual !
           run: make venv
 
-        - name: Run Testes
-          run: make test
+        # - name: Run Testes
+        #   run: make test
 
         - uses: mr-smithers-excellent/docker-build-push@v6
           name: Build & push Docker image
