--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -75,13 +75,16 @@ jobs:
           run: echo "VERSION=${{ steps.version.outputs.version }}" >> $GITHUB_ENV
 
         - name: Install Make 
-          run: sudo apt-get update && sudo apt-get install make && pip install --upgrade pip
+          run: sudo apt-get update && sudo apt-get install make && pip install
+        
+        - name: clean up Env Virtual !
+          run: make clean
 
-        - name: Create Env Virtual !
+        - name: Create Env Virtual 
           run: make venv
 
-        # - name: Run Testes
-        #   run: make test
+        - name: Run Testes
+          run: make test
 
         - uses: mr-smithers-excellent/docker-build-push@v6
           name: Build & push Docker image
