--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -75,7 +75,7 @@ jobs:
           run: echo "VERSION=${{ steps.version.outputs.version }}" >> $GITHUB_ENV
 
         - name: Install Make 
-          run: sudo apt-get update && sudo apt-get install make && pip install
+          run: sudo apt-get update && sudo apt-get install make
         
         - name: clean up Env Virtual !
           run: make clean
