--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -94,10 +94,10 @@ jobs:
         - name: Build & push Docker image
           uses: mr-smithers-excellent/docker-build-push@v6
           with:
-            image: ${{ env.DOCKER_IMAGE_NAME }}:$VERSION  # Specify the image name and version
+            image: ${{ env.DOCKER_IMAGE_NAME }} # Specify the image name and version
             tags: $VERSION
             registry: docker.io
-            dockerfile: ./build/
+            dockerfile: ./build/Dockerfile
             username: ${{ env.REGISTRY_USER }}
             password: ${{ env.REGISTRY_PASS }}
 
