--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -101,19 +101,19 @@ jobs:
             username: ${{ env.REGISTRY_USER }}
             password: ${{ env.REGISTRY_PASS }}
 
-        - name: Scan image
-          uses: anchore/scan-action@v3
-          with:
-            image: "${{ env.DOCKER_IMAGE_NAME }}:$VERSION"
-            fail-build: false
-
         - name: Deploy to server
           run: |
             echo "${{ env.REGISTRY_PASS }}" | docker login -u "${{ env.REGISTRY_USER }}" --password-stdin
             docker ps -aq | xargs docker stop || true
             docker ps -aq | xargs docker rm || true
-            docker run -d -p 5000:5000 "${{ env.IMAGE_NAME }}:$VERSION"
+            docker run -d -p 5000:5000 "${{ env.DOCKER_IMAGE_NAME }}:$VERSION"
             docker ps 
+          
+        - name: Scan image
+          uses: anchore/scan-action@v3
+          with:
+            image: "${{ env.DOCKER_IMAGE_NAME }}:$VERSION"
+            fail-build: false
 
         # - name: 🔎 Check IP
         #   run: |
