--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -104,11 +104,19 @@ jobs:
         - name: Deploy to server
           run: |
             echo "${{ env.REGISTRY_PASS }}" | docker login -u "${{ env.REGISTRY_USER }}" --password-stdin
-            docker ps -aq | xargs docker stop || true
-            docker ps -aq | xargs docker rm || true
+            docker ps -aq | xargs -r docker stop || true
+            docker ps -aq | xargs -r docker rm || true
             docker run -d -p 5000:5000 "${{ env.DOCKER_IMAGE_NAME }}:$VERSION"
             docker ps 
-          
+            sleep 10
+            curl http://localhost:5000
+        
+        - name: Debug Information
+          run: |
+            echo "DOCKER_IMAGE_NAME: ${{ env.DOCKER_IMAGE_NAME }}"
+            echo "VERSION: $VERSION"
+            docker images
+
         - name: Scan image
           uses: anchore/scan-action@v3
           with:
