MTOR/feat:error

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -100,9 +100,10 @@ jobs:
         - name: Scan image
           uses: anchore/scan-action@v3
           with:
-            image: "${{ env.IMAGE_REG }}/${{ env.DOCKER_IMAGE_NAME }}"
+            image: "${{ env.DOCKER_IMAGE_NAME }}"
             fail-build: false
             severity-cutoff: high
+            output-format: table
 
         - name: Log into registry
           run: echo "${{ env.REGISTRY_PASS }}" | docker login ${{ env.IMAGE_REG }} -u ${{ env.REGISTRY_USER }} --password-stdin
