--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -117,7 +117,7 @@ jobs:
             echo "${{ env.REGISTRY_PASS }}" | docker login -u "${{ env.REGISTRY_USER }}" --password-stdin
             docker ps -aq | xargs -r docker stop || true
             docker ps -aq | xargs -r docker rm || true
-            docker run -d -p 5000:5000 "${{ env.DOCKER_IMAGE_NAME }}:$VERSION"
+            docker run -d -p 5000:5000 "${{ env.DOCKER_IMAGE_NAME }}:1.0.0"
             docker ps 
             sleep 10
             curl http://localhost:5000
