--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -60,11 +60,13 @@ jobs:
           id: version_increment
           run: |
             if [[ "${{ steps.commit_message.outputs.commit_message }}" == "feat:"* ]]; then
-              echo "minor" >> $GITHUB_ENV
+              echo "increment=minor" >> $GITHUB_ENV
+            elif [[ "${{ steps.commit_message.outputs.commit_message }}" == "fix:"* ]]; then
+              echo "increment=patch" >> $GITHUB_ENV
             elif [[ "${{ steps.commit_message.outputs.commit_message }}" == "breaking:"* ]]; then
-              echo "major" >> $GITHUB_ENV
+              echo "increment=major" >> $GITHUB_ENV
             else
-              echo "patch" >> $GITHUB_ENV
+              echo "increment=patch" >> $GITHUB_ENV
             fi
 
 
@@ -74,6 +76,8 @@ jobs:
           with:
             scheme: semver
             increment: ${{ steps.version_increment.outputs.increment }}
+          run: |
+             echo ${{ steps.version_increment.outputs.increment }}
             #increment: major
 
         - name: Install Make 
