--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -69,15 +69,17 @@ jobs:
               echo "increment=patch" >> $GITHUB_ENV
             fi
 
-
+        - name: git name 
+          run: |
+            echo ${{ steps.version_increment.outputs.increment }}
+            
         - name: Get next version
           uses: reecetech/version-increment@2023.4.1
           id: version
           with:
             scheme: semver
             increment: ${{ steps.version_increment.outputs.increment }}
-          run: |
-             echo ${{ steps.version_increment.outputs.increment }}
+
             #increment: major
 
         - name: Install Make 
