--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -71,8 +71,8 @@ jobs:
 
         - name: git name 
           run: |
-            echo ${{ steps.version_increment.outputs.increment }}
-            
+            echo "${{ steps.version_increment.outputs.increment }}""
+
         - name: Get next version
           uses: reecetech/version-increment@2023.4.1
           id: version
@@ -82,46 +82,46 @@ jobs:
 
             #increment: major
 
-        - name: Install Make 
-          run: sudo apt-get update && sudo apt-get install make
+        # - name: Install Make 
+        #   run: sudo apt-get update && sudo apt-get install make
         
-        - name: clean up Env Virtual
-          run: make clean
+        # - name: clean up Env Virtual
+        #   run: make clean
 
-        - name: venv up 
-          run: make venv
+        # - name: venv up 
+        #   run: make venv
 
-        - name: Run Testes
-          run: make test
+        # - name: Run Testes
+        #   run: make test
 
-        - name: Build image
-          run: |
-            docker build . --file build/Dockerfile --tag ${{ env.DOCKER_IMAGE_NAME }}:${{ steps.version.outputs.version }}
+        # - name: Build image
+        #   run: |
+        #     docker build . --file build/Dockerfile --tag ${{ env.DOCKER_IMAGE_NAME }}:${{ steps.version.outputs.version }}
         
-        - name: Scan image
-          uses: anchore/scan-action@v3
-          with:
-            image: ${{ env.DOCKER_IMAGE_NAME }}:${{ steps.version.outputs.version }}
-            fail-build: false
-            severity-cutoff: high
-            output-format: table
+        # - name: Scan image
+        #   uses: anchore/scan-action@v3
+        #   with:
+        #     image: ${{ env.DOCKER_IMAGE_NAME }}:${{ steps.version.outputs.version }}
+        #     fail-build: false
+        #     severity-cutoff: high
+        #     output-format: table
 
-        - name: Log into registry
-          run: echo "${{ env.REGISTRY_PASS }}" | docker login ${{ env.IMAGE_REG }} -u ${{ env.REGISTRY_USER }} --password-stdin
+        # - name: Log into registry
+        #   run: echo "${{ env.REGISTRY_PASS }}" | docker login ${{ env.IMAGE_REG }} -u ${{ env.REGISTRY_USER }} --password-stdin
 
-        - name: Push images to registry 
-          run: |
-            docker push ${{ env.DOCKER_IMAGE_NAME }}:${{ steps.version.outputs.version }}
+        # - name: Push images to registry 
+        #   run: |
+        #     docker push ${{ env.DOCKER_IMAGE_NAME }}:${{ steps.version.outputs.version }}
 
-        - name: Deploy to server
-          run: |
-            echo "${{ env.REGISTRY_PASS }}" | docker login -u "${{ env.REGISTRY_USER }}" --password-stdin
-            docker ps -aq | xargs -r docker stop || true
-            docker ps -aq | xargs -r docker rm || true
-            docker run -d -p 5000:5000 "${{ env.DOCKER_IMAGE_NAME }}:${{ steps.version.outputs.version }}"
-            docker ps 
-            sleep 10
-            curl http://localhost:5000
+        # - name: Deploy to server
+        #   run: |
+        #     echo "${{ env.REGISTRY_PASS }}" | docker login -u "${{ env.REGISTRY_USER }}" --password-stdin
+        #     docker ps -aq | xargs -r docker stop || true
+        #     docker ps -aq | xargs -r docker rm || true
+        #     docker run -d -p 5000:5000 "${{ env.DOCKER_IMAGE_NAME }}:${{ steps.version.outputs.version }}"
+        #     docker ps 
+        #     sleep 10
+        #     curl http://localhost:5000
 
         # - name: 🔎 Check IP
         #   run: |
