--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -71,7 +71,7 @@ jobs:
 
         - name: git name 
           run: |
-            echo "${{ steps.version_increment.outputs.increment }}""
+            echo "${{ steps.version_increment.outputs.increment }}"
 
         - name: Get next version
           uses: reecetech/version-increment@2023.4.1
