--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -54,6 +54,7 @@ jobs:
           id: commit_message
           run: |
             commit_message=$(git log --format=%B -n 1 ${{ github.sha }})
+            echo $commit_message
             echo "commit_message=${commit_message}" >> $GITHUB_ENV
 
         - name: Determine version increment
