--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -60,11 +60,11 @@ jobs:
         - name: Determine version increment
           id: version_increment
           run: |
-            if [[ "${{ steps.commit_message.outputs.commit_message }}" == "feat:"* ]]; then
+            if [[ ${{ steps.commit_message.outputs.commit_message }} == "feat:"* ]]; then
               echo "increment=minor" >> $GITHUB_ENV
-            elif [[ "${{ steps.commit_message.outputs.commit_message }}" == "fix:"* ]]; then
+            elif [[ ${{ steps.commit_message.outputs.commit_message }} == "fix:"* ]]; then
               echo "increment=patch" >> $GITHUB_ENV
-            elif [[ "${{ steps.commit_message.outputs.commit_message }}" == "breaking:"* ]]; then
+            elif [[ ${{ steps.commit_message.outputs.commit_message }} == "breaking:"* ]]; then
               echo "increment=major" >> $GITHUB_ENV
             else
               echo "increment=patch" >> $GITHUB_ENV
@@ -72,7 +72,7 @@ jobs:
 
         - name: git name 
           run: |
-            echo "${{ steps.version_increment.outputs.increment }}"
+            echo ${{ steps.version_increment.outputs.increment }}
 
         - name: Get next version
           uses: reecetech/version-increment@2023.4.1
