--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -59,7 +59,7 @@ jobs:
         - name: Determine version increment
           id: version_increment
           run: |
-            echo "${{ steps.commit_message.outputs.commit_message }}"
+            echo  ${{ steps.commit_message.outputs.commit_message }} 
             if [[ "${{ steps.commit_message.outputs.commit_message }}" == "feat:"* ]]; then
               echo "increment=minor" >> $GITHUB_ENV
             elif [[ "${{ steps.commit_message.outputs.commit_message }}" == "fix:"* ]]; then
