--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -54,21 +54,27 @@ jobs:
           id: commit_message
           run: |
             commit_message=$(git log --format=%B -n 1 ${{ github.sha }})
-            echo "commit_message=$commit_message" >> $GITHUB_ENV
-
-        - name: Determine version increment
-          id: version_increment
-          run: |
-            echo  ${{ steps.commit_message.outputs.commit_message }} 
-            if [[ "${{ steps.commit_message.outputs.commit_message }}" == "feat:"* ]]; then
+            if [[ "$commit_message" == "feat:"* ]]; then
               echo "increment=minor" >> $GITHUB_ENV
-            elif [[ "${{ steps.commit_message.outputs.commit_message }}" == "fix:"* ]]; then
-              echo "increment=patch" >> $GITHUB_ENV
-            elif [[ "${{ steps.commit_message.outputs.commit_message }}" == "breaking:"* ]]; then
+            elif [[ "$commit_message" == "breaking:"* ]]; then
               echo "increment=major" >> $GITHUB_ENV
             else
               echo "increment=patch" >> $GITHUB_ENV
             fi
+
+        # - name: Determine version increment
+        #   id: version_increment
+        #   run: |
+        #     echo  $commit_message 
+        #     if [[ "$commit_message" == "feat:"* ]]; then
+        #       echo "increment=minor" >> $GITHUB_ENV
+        #     elif [[ "$commit_message" == "fix:"* ]]; then
+        #       echo "increment=patch" >> $GITHUB_ENV
+        #     elif [[ "$commit_message" == "breaking:"* ]]; then
+        #       echo "increment=major" >> $GITHUB_ENV
+        #     else
+        #       echo "increment=patch" >> $GITHUB_ENV
+        #     fi
 
         - name: git name 
           run: |
