--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -42,62 +42,61 @@ jobs:
       env:
         PYTHON_VERSION: ${{ github.event.inputs.python-version || '3.9' }}
       steps: 
-        - name: Checkout Code 
+        - name: 🎯 Checkout Code 
           uses: actions/checkout@v3
 
-        - name: Sey up python ${{ inputs.python-version }}
+        - name: 🎯 Set up python ${{ inputs.python-version }}
           uses: actions/setup-python@v3
           with:
             python-version: ${{ env.PYTHON_VERSION }}
 
-        - name: Get next version
+        - name: 🎯 Get next version
           uses: reecetech/version-increment@2023.4.1
           id: version
           with:
             scheme: semver
-            increment: patch
+            increment: patch  # Here, we can specify the type of change: major, minor, or patch depending on the level of bug fixed.
 
-        # - name: Install Make 
-        #   run: sudo apt-get update && sudo apt-get install make
+        - name: 📜 Update && Install Make 
+          run: sudo apt-get update && sudo apt-get install make
         
-        # - name: clean up Env Virtual
-        #   run: make clean
+        - name: 🧹 Clean up project
+          run: make clean
 
-        # - name: venv up 
-        #   run: make venv
+        - name: Insatall dependence & Activate venv
+          run: make venv
 
-        # - name: Run Testes
-        #   run: make test
+        - name: 🎯 Run unit tests
+          run: make test
 
-        - name: Build image
+        - name: 🔨 Build container image
           run: |
-            echo ${{ steps.version.outputs.version }}
             docker build . --file build/Dockerfile --tag ${{ env.DOCKER_IMAGE_NAME }}:${{ steps.version.outputs.version }}
         
-        # - name: Scan image
-        #   uses: anchore/scan-action@v3
-        #   with:
-        #     image: ${{ env.DOCKER_IMAGE_NAME }}:${{ steps.version.outputs.version }}
-        #     fail-build: false
-        #     severity-cutoff: high
-        #     output-format: table
+        - name: 🔎 Scan the image docker 
+          uses: anchore/scan-action@v3
+          with:
+            image: ${{ env.DOCKER_IMAGE_NAME }}:${{ steps.version.outputs.version }}
+            fail-build: false
+            severity-cutoff: high
+            output-format: table
 
-        # - name: Log into registry
-        #   run: echo "${{ env.REGISTRY_PASS }}" | docker login ${{ env.IMAGE_REG }} -u ${{ env.REGISTRY_USER }} --password-stdin
+        - name: 💀 Login to the Registry
+          run: echo "${{ env.REGISTRY_PASS }}" | docker login ${{ env.IMAGE_REG }} -u ${{ env.REGISTRY_USER }} --password-stdin
 
-        # - name: Push images to registry 
-        #   run: |
-        #     docker push ${{ env.DOCKER_IMAGE_NAME }}:${{ steps.version.outputs.version }}
+        - name: 📤 Push container image to the registry 
+          run: |
+            docker push ${{ env.DOCKER_IMAGE_NAME }}:${{ steps.version.outputs.version }}
 
-        # - name: Deploy to server
-        #   run: |
-        #     echo "${{ env.REGISTRY_PASS }}" | docker login -u "${{ env.REGISTRY_USER }}" --password-stdin
-        #     docker ps -aq | xargs -r docker stop || true
-        #     docker ps -aq | xargs -r docker rm || true
-        #     docker run -d -p 5000:5000 "${{ env.DOCKER_IMAGE_NAME }}:${{ steps.version.outputs.version }}"
-        #     docker ps 
-        #     sleep 10
-        #     curl http://localhost:5000
+        - name: 🚀 Deploy localy Web App
+          run: |
+            echo "${{ env.REGISTRY_PASS }}" | docker login -u "${{ env.REGISTRY_USER }}" --password-stdin
+            docker ps -aq | xargs -r docker stop || true
+            docker ps -aq | xargs -r docker rm || true
+            docker run -d -p 5000:5000 "${{ env.DOCKER_IMAGE_NAME }}:${{ steps.version.outputs.version }}"
+            docker ps 
+            sleep 10
+            curl http://localhost:5000
 
         # - name: 🔎 Check IP
         #   run: |
