--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -63,7 +63,7 @@ jobs:
         - name: 🧹 Clean up project
           run: make clean
 
-        - name: Insatall dependence & Activate venv
+        - name: 🔨 Install Dependencies && Activate venv
           run: make venv
 
         - name: 🎯 Run unit tests
@@ -77,9 +77,10 @@ jobs:
           uses: anchore/scan-action@v3
           with:
             image: ${{ env.DOCKER_IMAGE_NAME }}:${{ steps.version.outputs.version }}
-            fail-build: false
-            severity-cutoff: high
+            fail-build: true
+            severity-cutoff: medium # Optionally specify the minimum vulnerability severity to trigger a failure.Valid choices are "negligible", "low", "medium", "high" and "critical"
             output-format: table
+            only-fixed: true
 
         - name: 💀 Login to the Registry
           run: echo "${{ env.REGISTRY_PASS }}" | docker login ${{ env.IMAGE_REG }} -u ${{ env.REGISTRY_USER }} --password-stdin
@@ -90,7 +91,6 @@ jobs:
 
         - name: 🚀 Deploy localy Web App
           run: |
-            echo "${{ env.REGISTRY_PASS }}" | docker login -u "${{ env.REGISTRY_USER }}" --password-stdin
             docker ps -aq | xargs -r docker stop || true
             docker ps -aq | xargs -r docker rm || true
             docker run -d -p 5000:5000 "${{ env.DOCKER_IMAGE_NAME }}:${{ steps.version.outputs.version }}"
