MTOR/test high trigger scan

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -79,7 +79,7 @@ jobs:
           with:
             image: ${{ env.DOCKER_IMAGE_NAME }}:${{ steps.version.outputs.version }}
             fail-build: true
-            severity-cutoff: medium # Optionally specify the minimum vulnerability severity to trigger a failure.Valid choices are "negligible", "low", "medium", "high" and "critical"
+            severity-cutoff: high # Optionally specify the minimum vulnerability severity to trigger a failure.Valid choices are "negligible", "low", "medium", "high" and "critical"
             output-format: table
             only-fixed: true
 
